# ai-research-os-workshop

./: .gitignore  DEPENDENCIES.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
examples/example_1_deep_research/: prompt.md  research-agentic-harness-placeholder.md
examples/example_2_github/: prompt.md
examples/example_2_github/research-coding-agent-architectures/: index.md  index.yaml  log.md
examples/example_2_github/research-coding-agent-architectures/wiki/: open-questions.md  overview.md  synthesis.md
examples/example_3_ingest_links/: prompt.md
examples/example_3_ingest_links/research-custom-urls/: index.md  index.yaml  log.md
examples/example_3_ingest_links/research-custom-urls/raw/: web-building-agentic-graphrag-systems.md  web-from-vibe-coding-to-real-engineering-team.md  web-inside-neo4js-agent-memory.md
examples/example_3_ingest_links/research-custom-urls/wiki/: open-questions.md  overview.md  synthesis.md
plugins/ai-research-os/.claude-plugin/: plugin.json
plugins/ai-research-os/skills/nlm-skill/: SKILL.md
plugins/ai-research-os/skills/readwise-cli/: SKILL.md
plugins/ai-research-os/skills/research/: CONVENTIONS.md  SKILL.md
plugins/ai-research-os/skills/research-lint/: SKILL.md
plugins/ai-research-os/skills/research-render/: SKILL.md
plugins/obsidian-ai-os/.claude-plugin/: plugin.json
plugins/obsidian-ai-os/skills/obsidian-cli/: SKILL.md
plugins/obsidian-ai-os/skills/research-distill/: SKILL.md
plugins/obsidian-ai-os/skills/research-lint/: SKILL.md
plugins/obsidian-ai-os/skills/research-render/: SKILL.md
(+81 files in other folders)
