[project]
name = "obsidian-ai-os"
version = "0.1.0"
description = "Research skills plugin for an Obsidian-based Second Brain (the /research-* family)."
readme = "README.md"
authors = [
    { name = "Paul Iusztin", email = "p.b.iusztin@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
# Dependencies consumed by the helper scripts the skills invoke via `uv run python`:
#   - pyyaml        index builders + lint scripts (yaml)
#   - httpx         research/scripts/download_assets.py (image fetch)
#   - pymupdf       research/scripts/extract_pdf.py (PDF parsing)
#   - pymupdf4llm   research/scripts/extract_pdf.py (PDF -> markdown)
#   - matplotlib    research-render chart_writer (generated .py charts)
dependencies = [
    "pyyaml>=6.0.1",
    "httpx>=0.28.1",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "matplotlib>=3.8.0",
]

[tool.uv]
package = false
